--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/MTF Build.loader.js";
+      var loaderUrl = buildUrl + "/Mine-To-Five.loader.js";
       var config = {
-        dataUrl: buildUrl + "/MTF Build.data.br",
-        frameworkUrl: buildUrl + "/MTF Build.framework.js.br",
-        codeUrl: buildUrl + "/MTF Build.wasm.br",
+        dataUrl: buildUrl + "/Mine-To-Five.data.br",
+        frameworkUrl: buildUrl + "/Mine-To-Five.framework.js.br",
+        codeUrl: buildUrl + "/Mine-To-Five.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Mine to Five!",
