--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Mine-To-Five.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Mine-To-Five.data.br",
-        frameworkUrl: buildUrl + "/Mine-To-Five.framework.js.br",
-        codeUrl: buildUrl + "/Mine-To-Five.wasm.br",
+        dataUrl: buildUrl + "/Mine-To-Five.data",
+        frameworkUrl: buildUrl + "/Mine-To-Five.framework.js",
+        codeUrl: buildUrl + "/Mine-To-Five.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Mine to Five!",
